--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3393,7 +3393,7 @@ section {
 # Customs
 --------------------------------------------------------------*/
 
-.lk-link {
+.learn-link {
     background: none;
     font-size: var(--bs-body-font-size);
     font-weight: bold;
