--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2552,6 +2552,98 @@ section {
     background: rgba(var(--color-primary-rgb), 0.85);
 }
 
+.contact .changepassword-form {
+    width: 100%;
+    background: var(--color-white);
+}
+
+.contact .changepassword-form .form-group {
+    padding-bottom: 8px;
+}
+
+.contact .changepassword-form .error-message {
+    display: none;
+    color: var(--color-white);
+    background: var(--color-red);
+    text-align: left;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .changepassword-form .error-message br+br {
+    margin-top: 25px;
+}
+
+.contact .changepassword-form .sent-message {
+    display: none;
+    color: var(--color-white);
+    background: var(--color-green);
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .changepassword-form .loading {
+    display: none;
+    background: var(--color-white);
+    text-align: center;
+    padding: 15px;
+}
+
+.contact .changepassword-form .loading:before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px -6px 0;
+    border: 3px solid var(--color-green);
+    border-top-color: var(--color-white);
+    -webkit-animation: animate-loading 1s linear infinite;
+    animation: animate-loading 1s linear infinite;
+}
+
+.contact .changepassword-form input[type=text],
+.contact .changepassword-form input[type=email],
+.contact .changepassword-form input[type=password],
+.contact .changepassword-form textarea {
+    border-radius: 0px;
+    box-shadow: none;
+    font-size: 14px;
+}
+
+.contact .changepassword-form input[type=text]:focus,
+.contact .changepassword-form input[type=email]:focus,
+.contact .changepassword-form input[type=password]:focus,
+.contact .changepassword-form textarea:focus {
+    border-color: var(--color-secondary-light);
+}
+
+.contact .changepassword-form input[type=text],
+.contact .changepassword-form input[type=password],
+.contact .changepassword-form input[type=email] {
+    height: 48px;
+    padding: 10px 15px;
+}
+
+.contact .changepassword-form textarea {
+    padding: 10px 12px;
+    height: 290px;
+}
+
+.contact .changepassword-form button[type=submit] {
+    background: var(--color-primary);
+    border: 0;
+    padding: 13px 50px;
+    color: var(--color-white);
+    transition: 0.4s;
+    border-radius: 0;
+}
+
+.contact .changepassword-form button[type=submit]:hover {
+    background: rgba(var(--color-primary-rgb), 0.85);
+}
+
 @-webkit-keyframes animate-loading {
     0% {
         transform: rotate(0deg);
